<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="popup_menu">POPUP MENU</string>
    <string name="file">file</string>
    <string name="create_new">new</string>
    <string name="open">open</string>
    <string name="menu_archive">archieve</string>
    <string name="menu_delete">delete</string>
    <string name="popup_window">POPUP WINDOW</string>
    <string name="test_string">TEST</string>
    <string name="section_list">SECTION LIST</string>
    <string name="custom_section_list">CUSTOM SECTION</string>
    <string name="circle_progress_bar">CIRCLE PROGRESS BAR</string>
    <string name="navigation_tab_bar">NAV TAB</string>
    <string name="artist">artist</string>
    <string name="album">album</string>
    <string name="wheel_indicator">WHEEL INDICATOR</string>

</resources>
