<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_movies"
        android:title="Movies"
        android:visible="true"/>
    <item
        android:id="@+id/item_music"
        android:title="Music"
        android:visible="true"/>
    <item
        android:id="@+id/item_comedy"
        android:title="Comedy"
        android:visible="true"/>

    <item android:id="@+id/file"
        android:title="@string/file" >
        <menu>
            <item android:id="@+id/create_new"
                android:title="@string/create_new" />
            <item android:id="@+id/open"
                android:title="@string/open" />
        </menu>
    </item>

    <group android:id="@+id/group_delete">
        <item android:id="@+id/menu_archive"
            android:title="@string/menu_archive" />
        <item android:id="@+id/menu_delete"
            android:title="@string/menu_delete" />
    </group>

</menu>